--- a/index.html
+++ b/index.html
@@ -115,21 +115,7 @@ Learning Python and digital marketing recently, love Latte without sugar.</div>
                                 <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
                             </div>
                         </section>
-                        </a>
-                        <a href="https://www.applealmond.com" target="_blank">
-                        <section>
-                            <div class="section_title">jschang19</div>
-                            <div class="about_section">
-                            <span style="display:block;">personal things.</span>
-                            </div>
-                            <div class="bottom_section">
-                                <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
-                                <span><i class="fas fa-star"></i>&nbsp; 0</span>
-                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
-                            </div>
-                        </section>
-                        </a>
-                        </div>
+                        </a></div>
       </div>
       <div id="forks" style="display:none;">
         <h1>Forks.</h1>
@@ -140,8 +126,7 @@ Learning Python and digital marketing recently, love Latte without sugar.</div>
         <div id="blogs"></div>
       </div>
       <div id="footer">
-        This website is owned by jschang19<p>
-        <a href="https://github.com/imfunniee" target="_blank">Using Templates from imfunniee</a>
+        <a href="https://github.com/imfunniee" target="_blank">made on earth by a human</a>
       </div>
     </div>
     <script type="text/javascript">
