--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ Learning Python and digital marketing recently, love Latte without sugar.</div>
       <div id="about">
                 <span style="display:block;"><i class="fas fa-users"></i> &nbsp; Applealmond</span>
                 <span style="display:none;"><i class="fas fa-envelope"></i> &nbsp; null</span>
-                <span style="display:block;"><i class="fas fa-link"></i> &nbsp; <a href="jschang19.github.io/">jschang19.github.io/</a></span>
+                <span style="display:block;"><i class="fas fa-link"></i> &nbsp; <a href="./blog/first-blog-of-me/index.html">jschang19.github.io/</a></span>
                 <span style="display:block;"><i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp; Taiwan</span>
                 <span style="display:none;"><i class="fas fa-user-tie"></i> &nbsp;&nbsp; Available for hire</span>
                 <div class="socials">
@@ -34,40 +34,23 @@ Learning Python and digital marketing recently, love Latte without sugar.</div>
                 </div>
                 </div>
     </div>
-         
     <div id="display">
-    <div id="forks">
-        <h1>Works.</h1>
-        <div class="projects" id="forks_section">
-        <a href="https://instagram.com/applealmond.blog" target="_blank">
-                        <section>
-                            <div class="section_title">Applealmond Instagram</div>
-                            <div class="about_section">
-                            <span style="display:block;">My major job in applealmond.com. I'm in charge of the management ot the account.</span>
-                            </div>
-                        </section>
-                        </a>
-        <a href="https://medium.com/jun-shawn" target="_blank">
-                        <section>
-                            <div class="section_title">Article in applealmond</div>
-                            <div class="about_section">
-                            <span style="display:block;">This block collects all the website article I have written in applealmond.com.</span>
-                            </div>
-                        </section>
-                        </a>                
-        <a href="https://medium.com/jun-shawn" target="_blank">
-                        <section>
-                            <div class="section_title">Medium Blog</div>
-                            <div class="about_section">
-                            <span style="display:block;">My personal blog. I share lots of tech guide and review on it. There had been 500K views in 2020.</span>
-                            </div>
-                        </section>
-                        </a>
-                        </div>
-      </div>
       <div id="work">
-        <h1>Code.</h1>
+        <h1>Work.</h1>
         <div class="projects" id="work_section">
+                        <a href="https://github.com/jschang19/Python-Score-Calculation" target="_blank">
+                        <section>
+                            <div class="section_title">Python-Score-Calculation</div>
+                            <div class="about_section">
+                            <span style="display:block;">馬公高中張君祥資訊學習歷程檔案，以 Python 設計一個能列出中位數、標準差等一為數據資料的程式。</span>
+                            </div>
+                            <div class="bottom_section">
+                                <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; Python</span>
+                                <span><i class="fas fa-star"></i>&nbsp; 0</span>
+                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
+                            </div>
+                        </section>
+                        </a>
                         <a href="https://github.com/jschang19/jschang19.github.io" target="_blank">
                         <section>
                             <div class="section_title">jschang19.github.io</div>
@@ -76,6 +59,32 @@ Learning Python and digital marketing recently, love Latte without sugar.</div>
                             </div>
                             <div class="bottom_section">
                                 <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; CSS</span>
+                                <span><i class="fas fa-star"></i>&nbsp; 0</span>
+                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
+                            </div>
+                        </section>
+                        </a>
+                        <a href="https://github.com/jschang19/kcshawn" target="_blank">
+                        <section>
+                            <div class="section_title">kcshawn</div>
+                            <div class="about_section">
+                            <span style="display:block;">Blog site</span>
+                            </div>
+                            <div class="bottom_section">
+                                <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
+                                <span><i class="fas fa-star"></i>&nbsp; 0</span>
+                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
+                            </div>
+                        </section>
+                        </a>
+                        <a href="https://github.com/jschang19/jschang19" target="_blank">
+                        <section>
+                            <div class="section_title">jschang19</div>
+                            <div class="about_section">
+                            <span style="display:block;">Config files for my GitHub profile.</span>
+                            </div>
+                            <div class="bottom_section">
+                                <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
                                 <span><i class="fas fa-star"></i>&nbsp; 0</span>
                                 <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
                             </div>
@@ -93,17 +102,28 @@ Learning Python and digital marketing recently, love Latte without sugar.</div>
                                 <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
                             </div>
                         </section>
-                        </a>
-                      </div>
+                        </a></div>
       </div>
-      <div id="forks" style="display:none;">
+      <div id="forks" style="display: block;">
         <h1>Forks.</h1>
-        <div class="projects" id="forks_section"></div>
+        <div class="projects" id="forks_section">
+                        <a href="https://github.com/jschang19/gitfolio" target="_blank">
+                        <section>
+                            <div class="section_title">gitfolio</div>
+                            <div class="about_section">
+                            <span style="display:block;"><img src="https://github.githubassets.com/images/icons/emoji/octocat.png?v8" class="emoji"> personal website + blog  for every github user</span>
+                            </div>
+                            <div class="bottom_section">
+                                <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
+                                <span><i class="fas fa-star"></i>&nbsp; 0</span>
+                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
+                            </div>
+                        </section>
+                        </a></div>
       </div>
       <div id="blog_section">
         <h1>Blog.</h1>
-        <div id="blogs">
-        {</div>
+        <div id="blogs"></div>
       </div>
       <div id="footer">
         <a href="https://github.com/imfunniee" target="_blank">made on earth by a human</a>
