--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@ Learning Python and digital marketing recently, love Latte without sugar.</div>
       <div id="about">
                 <span style="display:block;"><i class="fas fa-users"></i> &nbsp; Applealmond</span>
                 <span style="display:none;"><i class="fas fa-envelope"></i> &nbsp; null</span>
-                <span style="display:block;"><i class="fas fa-link"></i> &nbsp; <a href="./blog/first-blog-of-me/index.html">jschang19.github.io/</a></span>
+                <span style="display:block;"><i class="fas fa-link"></i> &nbsp; <a href="jschang19.github.io/">jschang19.github.io/</a></span>
                 <span style="display:block;"><i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp; Taiwan</span>
                 <span style="display:none;"><i class="fas fa-user-tie"></i> &nbsp;&nbsp; Available for hire</span>
                 <div class="socials">
                 <span style="display:none !important;"><a href="https://www.twitter.com/null" target="_blank" class="socials"><i class="fab fa-twitter"></i></a></span>
                 <span style="display:none !important;"><a href="https://www.dribbble.com/null" target="_blank" class="socials"><i class="fab fa-dribbble"></i></a></span>
-                <span style="display:none !important;"><a href="https://www.linkedin.com/in/null/" target="_blank" class="socials"><i class="fab fa-linkedin-in"></i></a></span>
-                <span style="display:none !important;"><a href="https://www.medium.com/@null/" target="_blank" class="socials"><i class="fab fa-medium-m"></i></a></span>
+                <span style="display:block;"><a href="https://www.linkedin.com/in/kcshawn/" target="_blank" class="socials"><i class="fab fa-linkedin-in"></i></a></span>
+                <span style="display:block;"><a href="https://www.medium.com/@kcshawn/" target="_blank" class="socials"><i class="fab fa-medium-m"></i></a></span>
                 </div>
                 </div>
     </div>
@@ -38,11 +38,11 @@ Learning Python and digital marketing recently, love Latte without sugar.</div>
       <div id="work">
         <h1>Work.</h1>
         <div class="projects" id="work_section">
-                        <a href="https://github.com/jschang19/Python-Score-Calculation" target="_blank">
+                        <a href="https://github.com/jschang19/Python_Web_Clawer" target="_blank">
                         <section>
-                            <div class="section_title">Python-Score-Calculation</div>
+                            <div class="section_title">Python_Web_Clawer</div>
                             <div class="about_section">
-                            <span style="display:block;">馬公高中張君祥資訊學習歷程檔案，以 Python 設計一個能列出中位數、標準差等一為數據資料的程式。</span>
+                            <span style="display:block;">個人寫的小型 Python 爬蟲程式，有 PTT,Dcard 和蘋果仁</span>
                             </div>
                             <div class="bottom_section">
                                 <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; Python</span>
@@ -59,19 +59,6 @@ Learning Python and digital marketing recently, love Latte without sugar.</div>
                             </div>
                             <div class="bottom_section">
                                 <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; CSS</span>
-                                <span><i class="fas fa-star"></i>&nbsp; 0</span>
-                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
-                            </div>
-                        </section>
-                        </a>
-                        <a href="https://github.com/jschang19/kcshawn" target="_blank">
-                        <section>
-                            <div class="section_title">kcshawn</div>
-                            <div class="about_section">
-                            <span style="display:block;">Blog site</span>
-                            </div>
-                            <div class="bottom_section">
-                                <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
                                 <span><i class="fas fa-star"></i>&nbsp; 0</span>
                                 <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
                             </div>
@@ -98,28 +85,28 @@ Learning Python and digital marketing recently, love Latte without sugar.</div>
                             </div>
                             <div class="bottom_section">
                                 <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; JavaScript</span>
+                                <span><i class="fas fa-star"></i>&nbsp; 1</span>
+                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
+                            </div>
+                        </section>
+                        </a>
+                        <a href="https://github.com/jschang19/Python-Score-Calculation" target="_blank">
+                        <section>
+                            <div class="section_title">Python-Score-Calculation</div>
+                            <div class="about_section">
+                            <span style="display:block;">馬公高中張君祥資訊學習歷程檔案，以 Python 設計一個能列出中位數、標準差等一為數據資料的程式。</span>
+                            </div>
+                            <div class="bottom_section">
+                                <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; Python</span>
                                 <span><i class="fas fa-star"></i>&nbsp; 0</span>
                                 <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
                             </div>
                         </section>
                         </a></div>
       </div>
-      <div id="forks" style="display: block;">
+      <div id="forks" style="display:none;">
         <h1>Forks.</h1>
-        <div class="projects" id="forks_section">
-                        <a href="https://github.com/jschang19/gitfolio" target="_blank">
-                        <section>
-                            <div class="section_title">gitfolio</div>
-                            <div class="about_section">
-                            <span style="display:block;"><img src="https://github.githubassets.com/images/icons/emoji/octocat.png?v8" class="emoji"> personal website + blog  for every github user</span>
-                            </div>
-                            <div class="bottom_section">
-                                <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
-                                <span><i class="fas fa-star"></i>&nbsp; 0</span>
-                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
-                            </div>
-                        </section>
-                        </a></div>
+        <div class="projects" id="forks_section"></div>
       </div>
       <div id="blog_section">
         <h1>Blog.</h1>
