--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
     <div id="profile">
       <div id="profile_img" style="background: url(https://avatars.githubusercontent.com/u/62253076?v=4) center;"></div>
       <div id="username"><span style="display:block;">Jun Shawn</span><a href="https://github.com/jschang19">@jschang19</a></div>
-      <div id="userbio" style="display: block;">Senior High student, and the Instagram Editor @applealmond.com .
-
-Learning Python and digital marketing recently, love Latte without sugar.</div>
+      <div id="userbio" style="display: block;">Amateur coder, student, Tech editor</div>
       <div id="about">
                 <span style="display:block;"><i class="fas fa-users"></i> &nbsp; Applealmond</span>
                 <span style="display:none;"><i class="fas fa-envelope"></i> &nbsp; null</span>
@@ -38,19 +36,6 @@ Learning Python and digital marketing recently, love Latte without sugar.</div>
       <div id="work">
         <h1>Work.</h1>
         <div class="projects" id="work_section">
-                        <a href="https://github.com/jschang19/Python_Web_Clawer" target="_blank">
-                        <section>
-                            <div class="section_title">Python_Web_Clawer</div>
-                            <div class="about_section">
-                            <span style="display:block;">個人寫的小型 Python 爬蟲程式，有 PTT,Dcard 和蘋果仁</span>
-                            </div>
-                            <div class="bottom_section">
-                                <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; Python</span>
-                                <span><i class="fas fa-star"></i>&nbsp; 0</span>
-                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
-                            </div>
-                        </section>
-                        </a>
                         <a href="https://github.com/jschang19/jschang19.github.io" target="_blank">
                         <section>
                             <div class="section_title">jschang19.github.io</div>
@@ -59,6 +44,19 @@ Learning Python and digital marketing recently, love Latte without sugar.</div>
                             </div>
                             <div class="bottom_section">
                                 <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; CSS</span>
+                                <span><i class="fas fa-star"></i>&nbsp; 0</span>
+                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
+                            </div>
+                        </section>
+                        </a>
+                        <a href="https://github.com/jschang19/Python_Web_Clawer" target="_blank">
+                        <section>
+                            <div class="section_title">Python_Web_Clawer</div>
+                            <div class="about_section">
+                            <span style="display:block;">個人寫的小型 Python 爬蟲程式，有 PTT,Dcard 和蘋果仁</span>
+                            </div>
+                            <div class="bottom_section">
+                                <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; Python</span>
                                 <span><i class="fas fa-star"></i>&nbsp; 0</span>
                                 <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
                             </div>
