--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/magic-grid/dist/magic-grid.min.js"></script>
     <link rel="stylesheet" href="index.css">
-  <link rel="icon" href="https://avatars.githubusercontent.com/u/62253076?v=4" type="image/png"></head>
+  <link rel="icon" href="https://avatars.githubusercontent.com/u/62253076?v=4" type="image/png">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3812E8LV40"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-3812E8LV40');
+</script></head>
 
   <body>
     <div id="loading">
@@ -17,7 +26,7 @@
     <div id="profile">
       <div id="profile_img" style="background: url(https://avatars.githubusercontent.com/u/62253076?v=4) center;"></div>
       <div id="username"><span style="display:block;">Jun Shawn</span><a href="https://github.com/jschang19">@jschang19</a></div>
-      <div id="userbio" style="display: block;">Amateur coder, student, Tech editor</div>
+      <div id="userbio" style="display: none;">undefined</div>
       <div id="about">
                 <span style="display:block;"><i class="fas fa-users"></i> &nbsp; Applealmond</span>
                 <span style="display:none;"><i class="fas fa-envelope"></i> &nbsp; null</span>
@@ -36,6 +45,19 @@
       <div id="work">
         <h1>Work.</h1>
         <div class="projects" id="work_section">
+                        <a href="https://github.com/jschang19/jschang19" target="_blank">
+                        <section>
+                            <div class="section_title">jschang19</div>
+                            <div class="about_section">
+                            <span style="display:block;">Config files for my GitHub profile.</span>
+                            </div>
+                            <div class="bottom_section">
+                                <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
+                                <span><i class="fas fa-star"></i>&nbsp; 0</span>
+                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
+                            </div>
+                        </section>
+                        </a>
                         <a href="https://github.com/jschang19/jschang19.github.io" target="_blank">
                         <section>
                             <div class="section_title">jschang19.github.io</div>
@@ -57,19 +79,6 @@
                             </div>
                             <div class="bottom_section">
                                 <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; Python</span>
-                                <span><i class="fas fa-star"></i>&nbsp; 0</span>
-                                <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
-                            </div>
-                        </section>
-                        </a>
-                        <a href="https://github.com/jschang19/jschang19" target="_blank">
-                        <section>
-                            <div class="section_title">jschang19</div>
-                            <div class="about_section">
-                            <span style="display:block;">Config files for my GitHub profile.</span>
-                            </div>
-                            <div class="bottom_section">
-                                <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
                                 <span><i class="fas fa-star"></i>&nbsp; 0</span>
                                 <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
                             </div>
