--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <!DOCTYPE html><html lang="en"><head>
-    <meta http-equiv="refresh" content="0;url=https://jcshawn.com.com" />
+    <meta http-equiv="refresh" content="0;url=https://jcshawn.com" />
 </body></html>
